objects/SPIN_Stage_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business_ProcessID__c</fullName>
        <label>Business ProcessID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Id__c</fullName>
        <label>Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SPIN Stage Config</label>
</CustomObject>